refactor: Prefix 'Esy' für Konfigurationen (#23)